[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transferase"
description = "Transferase"
authors = [{name = "Andrew D Smith", email = "andrewds@usc.edu"}]
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[tool.hatch.version]
path = "version.py"

[tool.hatch.build.targets.wheel]
exclude = [
    "**/*",  # Exclude everything recursively
    "!*.so", # Except the library .so file
    "!*.py", # Except any python bindings
    "!README.md", # Except the README file
]

[tool.hatch.build.targets.sdist]
exclude = [
    "**/*",  # Exclude everything recursively
    ".gitignore",  # This needs to be specified
    "!*.py", # Except any python bindings
    "!README.md", # Except the README file
]
