[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transferase"
description = "Transferase"
authors = [{name = "Andrew D Smith", email = "andrewds@usc.edu"}]
maintainers =  [{name = "Andrew D Smith", email = "andrewds@usc.edu"}]
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]
requires-python = ">= 3.12"
keywords = ["methylome", "DNA methylation", "epigenetics", "epigenomics"]
classifiers = [
            "Development Status :: 3 - Alpha",
            "Intended Audience :: Developers",
            "Intended Audience :: Healthcare Industry",
            "Intended Audience :: Science/Research",
            "Topic :: Scientific/Engineering :: Bio-Informatics",
            "Topic :: Scientific/Engineering :: Information Analysis",
            "Topic :: Scientific/Engineering :: Medical Science Apps.",
            "Programming Language :: Python :: 3.12",
            "Programming Language :: Python :: 3.13",
            "Programming Language :: Python :: 3.14",
            "Programming Language :: Python :: Implementation :: CPython",
]
[project.urls]
Homepage = "https://github.com/andrewdavidsmith/transferase"
Documentation = "https://github.com/andrewdavidsmith/transferase"
Repository = "https://github.com/andrewdavidsmith/transferase"
Issues = "https://github.com/andrewdavidsmith/transferase/issues"
# Changelog = ""

[tool.hatch.version]
path = "version.py"

[tool.hatch.build.targets.wheel.hooks.custom]
# This will ensure no surprises in the name of the wheel file so we
# can modify it later using auditwheel
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
exclude = [
    "**/*",  # Exclude everything recursively
    "!*.so", # Except the library .so file
    "!*.py", # Except any python bindings
]

[tool.hatch.build.targets.sdist]
exclude = [
    "**/*",  # Exclude everything recursively
    "!*.py", # Except any python bindings
]
